--- a/day-planner/public/index.html
+++ b/day-planner/public/index.html
@@ -25,7 +25,20 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div class = "button-container" style = "position: absolute; left: 100px;">
+      <button id = "googleSignIn"  style = "position: relative; float:left;">
+      Google Login
+      </button>
+      <button id = "emailSignIn" style = "position: relative;">
+          email Login
+      </button>
+      <button id = "signOut" style = "position: relative;">
+          Signout User
+        </button>
+    </div>
     <div id="root"></div>
+
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
